outcomes: fix alignment at top of document
For now we're using our own separate classes to fix these issues
so as not to break other pages using the existing CSS.

Additional work is required to reconcile this with other pages
and remove the duplication.

--- a/themes/docsy/assets/scss/_custom.scss
+++ b/themes/docsy/assets/scss/_custom.scss
@@ -1399,6 +1399,13 @@ code {
 /* Text .chroma . {  } */
 /* TextWhitespace .chroma .w {  } */
 
+.outcomes {
+  h2,
+  a {
+    padding-top: 0;
+  }
+}
+
 .outcomes-pager {
   a {
     border: 1px solid #485764 !important;
